--- a/index.html
+++ b/index.html
@@ -6,23 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I’m a Porsche With No Brakes</title>
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"rel="stylesheet"/>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <form action="">
-      <div class="logo">
-        <img src=""> <h2>spotify</h2>
+    <header>
+      <div class="logo"> <img src=""><h2>spotify</h2></div>
+      <nav>
+        <ul>
+          <a href="#"><li>home</li></a>
+          <a href="#"><li>work</li></a>
+          <a href="#"><li>portfolio</li></a>
+          <a href="#"><li>contact</li></a>
+        </ul>
+      </nav>
+    </header>
+    <h1>I’m a Porsche With No Brakes</h1>
+    <aside>
+      <div class="top-center">
+        <div class="left1">Project 1</div>
+        <div class="left2">Project 2</div>
+        <div class="right2">Project 3</div>
+        <div class="right1">Project 4</div>
       </div>
-      <label for="">email address</label>
-      <input class="user" type="email" placeholder="example@gmail.com" required>
-      <label for="">password</label>
-      <input class="password" type="password" placeholder="password" required>
-      <a href=""><p>forget your password?</p></a>
-      <input class="signin" type="submit" value="sign in">
-    </form>
+    </aside>
+    <div class="image"></div>
+    <div class="center-center">
+      <h3>I’m a Porsche With No Brakes</h3>
+      <button>good</button>
+    </div>
+    <main>
+      <form action="">
+        <div class="logo">
+          <img src=""> <h2>spotify</h2>
+        </div>
+        <label for="">email address</label>
+        <input class="user" type="email" placeholder="example@gmail.com" required>
+        <label for="">password</label>
+        <input class="password" type="password" placeholder="password" required>
+        <a href=""><p>forget your password?</p></a>
+        <input class="signin" type="submit" value="sign in">
+      </form>
+    </main>
+    <section>
+      <div class="left">
+        <img src="">
+        <p></p>
+        <input type="text" >
+        <input type="tel" >
+        <div class="">
+          <span>facebook</span>
+          <span>twitter</span>
+          <span>instagram</span>
+          <span>google</span>
+        </div>
+      </div>
+        <div class="menu">
+          <h4>menu</h4>
+          <ul>
+            <li>home</li>
+            <li>service</li>
+            <li>blog</li>
+            <li>developer</li>
+            <li>contact us</li>
+          </ul>
+        </div>
+      <div class="right">
+        <h4>for travel with us<span> please contact with us</span></h4>
+        <label for="name">name</label>
+        <input class="name" id="name" type="text">
+        <label for="email">email</label>
+        <input class="email" id="email" type="email">
+        <label for="">message</label>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <input class="sub" type="submit" value="submit">
+      </div>
+    </section>
+    <footer>&copy; copyright all rights reserved</footer>
   </body>
   </html>
   <!-- <i class="material-icons-outlined">settings</i> -->
